Improve responsive layout, fix extra margin after list.

--- a/public/stylesheets/lol.css
+++ b/public/stylesheets/lol.css
@@ -160,7 +160,7 @@ nav .active-page {
 .entries {
     list-style: none;
     padding: 0;
-    margin: 20px 0 20px 0;
+    margin: 20px 0 0 0;
 }
 
 .entry {
@@ -244,17 +244,24 @@ nav .active-page {
     content: attr(data-label);
 }
 
-@media all and (max-width: 720px) {
-    .entry {
-        flex-direction: column;
+@media only screen and (min--moz-device-pixel-ratio: 2),
+       only screen and (-o-min-device-pixel-ratio: 2/1),
+       only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio: 2),
+       only screen and (max-width: 749px) {
+
+    .text{
+        width: calc(100% - 40px);
     }
 
-    .year {
-        justify-content: flex-start;
+    .entry {
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .image-container {
         background-position: left 0;
+        width: calc(100% - 40px);
         min-height: 20rem;
         margin: 0 0 20px 0;
     }
